k8s/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  replicas: 1
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: location
                    operator: In
                    values:
                      - local
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:latest
        volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma-data
        ports:
        - containerPort: 3001
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-data-pvc
