k8s/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  ports:
    - port: 3001
  selector:
    app: uptime-kuma
  type: ClusterIP
